--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 coverage
+
+# Ignore API key file for figaro
+/config/application.yml
